--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                     <div class="mt-12 p-8 bg-primary/5 rounded-xl">
                         <h3 class="text-2xl font-semibold text-center mb-8">My CV</h3>
                         <div class="flex flex-col items-center gap-8">
-                            <img src="CVVV.png" alt="My CV" class="w-full max-w-2xl rounded-lg shadow-lg transition-all duration-300 hover:-translate-y-1 hover:shadow-xl">
-                            <a href="CVVV.png" download class="w-full sm:w-auto py-4 px-6 rounded-full bg-gradient-to-r from-primary-600 to-secondary-500 text-white text-center font-semibold flex items-center justify-center gap-2 transition-all duration-300 hover:shadow-lg hover:opacity-90">
+                            <img src="CVC.png" alt="My CV" class="w-full max-w-2xl rounded-lg shadow-lg transition-all duration-300 hover:-translate-y-1 hover:shadow-xl">
+                            <a href="CVC.png" download class="w-full sm:w-auto py-4 px-6 rounded-full bg-gradient-to-r from-primary-600 to-secondary-500 text-white text-center font-semibold flex items-center justify-center gap-2 transition-all duration-300 hover:shadow-lg hover:opacity-90">
                                 <i class="fas fa-download"></i>
                                 Download CV
                             </a>
